luis_cache_sim/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: luis-cache-sim
  namespace: default
spec:
  tls:
    - hosts:
        - cache-sim.lab.lcarilla.de
      secretName: luis-cache-sim-cert
  rules:
    - host: "cache-sim.lab.lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: luis-cache-sim
                port:
                  number: 80
